<resources>
    <string name="app_name">tp2</string>
    <string name="action_settings">Settings</string>
    <string name="nom_ajout">nom</string>
    <string name="duree_ajout">duree</string>
    <string name="categorie_ajout">categorie</string>
    <string name="description_ajout">description</string>
    <string name="ajouter">OK</string>
    <string name="confirm">Vous êtes sûr de supprimer cette item?</string>
    <string name="yes">OUI</string>
    <string name="no">NON</string>
</resources>
